Добавление метода просмотра всех хранимых изображений
